# finnes

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  README.md  package-lock.json  package.json  tsconfig.base.json  vercel.json
.github/workflows/: ci.yml
circuits/: README.md  dvp.circom  escrow_deposit.circom  escrow_refund.circom  shield.circom  transfer.circom  unshield.circom
circuits/lib/: assets.circom  bits.circom  dvp.circom  enc_check.circom  escrow_leg.circom  merkle.circom  note.circom  poseidon_bls.circom  poseidon_constants.circom  shield.circom  transfer.circom  unshield.circom
contracts/: Cargo.toml
contracts/finnes/: Cargo.toml
contracts/finnes/src/: errors.rs  events.rs  lib.rs  merkle.rs  sac.rs  state.rs  test.rs  test_vectors.rs  types.rs  verifier.rs
contracts/finnes/test_snapshots/test/: admin_can_update_kyc_root.1.json  double_init_rejected.1.json  transfer_rejects_wrong_next_index.1.json  unused_nullifier_reports_false.1.json
docs/: DVP_ESCROW.md  INDEXER_IMPLEMENTATION.md  PUBLIC_IO.md  TASK.md
frontend/: .gitignore  README.md  next.config.mjs  package.json  tailwind.config.ts  tsconfig.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: AuditorKeyInput.tsx  Batik.tsx  ComplianceStatus.tsx  ConfidentialBalances.tsx  DisclosurePanel.tsx  FlowSteps.tsx  FreezePanel.tsx  HeaderWalletButton.tsx  KeyManager.tsx  MockBadge.tsx  OpResultPanel.tsx  Parallax.tsx  RoleSwitcher.tsx  SettlementConsole.tsx  ShieldUnshieldForm.tsx  SiteFooter.tsx  SiteHeader.tsx  TransferForm.tsx  TrustBoundaryBanner.tsx  TxList.tsx  WalletConnect.tsx
frontend/lib/: config.ts  contract-spec.json  demo-data.ts  demo-state.ts  finnes-client.ts  freeze.ts  host-bytes.ts  indexer.ts  keys.ts  live-notes.ts  note-store.ts  prove-browser.ts  soroban.ts  use-keys.ts  write-flow.ts
frontend/scripts/: shot-populated.mjs  shot-regulator.mjs  shot.mjs
indexer/: README.md  package.json  tsconfig.json
indexer/src/: config.ts  encoding.ts  index.ts  stellar.ts
indexer/test/: integration.mjs
prover/: package.json  tsconfig.json
prover/src/: index.ts  prove.ts  snarkjs.d.ts  types.ts  verifyLocal.ts  witness.ts
scripts/: build-circuits.sh  demo.ts  deploy.sh  disclose-partial-unshield-live.ts  disclose-shield-live.ts  disclose-transfer-live.ts  enroll-demo.ts  gen-init-config.ts  gen-poseidon-params.mjs  gen-verifier-fixture.ts  init.sh  prove-partial-unshield-live.ts  prove-shield-live.ts  prove-shield2-live.ts  prove-transfer-live.ts  prove-unshield-live.ts  setup-ceremony.sh  setup-demo-ceremony.sh  setup-shield-ceremony.sh  submit-shield-live.ts  submit-transfer-live.ts  submit-unshield-live.ts  test-assets-parity.ts  test-circuits.sh  test-comparator-parity.ts  test-demo-state.ts  test-dvp-witness.ts  test-enc-parity.ts  test-escrow-witness.ts  test-merkle-parity.ts  test-nonmembership-parity.ts  test-note-parity.ts  test-partial-unshield-live-witness.ts  test-poseidon-parity.ts  test-prove-shield.ts  test-prove-transfer-d20.ts  test-prove-transfer.ts  test-prove-unshield.ts  test-shield-witness.ts  test-transfer-live-anchor.ts  (+6 more)
scripts/lib/: demo-state.ts  dvp-scenario.ts  escrow-scenario.ts  live-notes.ts  shield-scenario.ts  transfer-live.ts  transfer-scenario.ts  unshield-live.ts  unshield-scenario.ts  vk-host.ts
sdk/: package.json  tsconfig.json
sdk/src/: disclose.ts  encrypt.ts  index.ts  merkle.ts  note.ts  poseidon-params.ts  scan.ts  (+5 more)
setup/: .gitkeep  README.md  ceremony.Dockerfile
(+43 files in other folders)
